Fixing EDTRM-476, where the Z-Index is having issues with the New menu in IE.

--- a/acm-user-interface/ark-web/src/main/webapp/resources/assets/css/application.css
+++ b/acm-user-interface/ark-web/src/main/webapp/resources/assets/css/application.css
@@ -427,7 +427,7 @@ span.fancytree-title {
 .module-content .left-sidebar header.header .btn-group.select.pull-right {
     position: relative;
     top: -90px;
-    z-index: 20000;
+    z-index: 1000 !important;
 
 }
 
